# coursework-2-bubble-sort

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
libs/: CMakeLists.txt
libs/scoring/: CMakeLists.txt
libs/scoring/include/: scoring.hpp
libs/scoring/source/: scoring.cpp
libs/testlib/: CMakeLists.txt
package/: problem.tex
package/large/: 01  precheck.cpp
package/small/: check.cpp
task/: CMakeLists.txt
task/solutions/: CMakeLists.txt  annealing.cpp  full.cpp  random.cpp  special_case.cpp
task/source/: check.cpp  gen.cpp  precheck.cpp
